fixed new layout bug

--- a/nomnom/static/style.css
+++ b/nomnom/static/style.css
@@ -11,11 +11,30 @@ body > div.container {
     margin: 0.6em;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 900px) {
     #poll-list .card {
-    width:100%;
-    max-width: 680px;
+        width:600px;
+    }
+}
+
+@media (max-width: 620px) {
+    #poll-list .card {
+    width:400px;
+    margin: 0.4em;
+    }
+}
+
+@media (max-width: 450px) {
+    #poll-list .card {
+    width:350px;
     margin: 0.2em;
+    }
+}
+
+@media (max-width: 350px) {
+    #poll-list .card {
+    width:300px;
+    margin: 0.1em;
     }
 }
 
